--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+a {
+	@apply text-blue-400 hover:text-blue-200 visited:text-blue-400
+}
