--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 a {
-	@apply text-blue-400 hover:text-blue-200 visited:text-blue-400
+	@apply text-blue-600 hover:text-blue-800 visited:text-blue-600 dark:visited:text-blue-400 dark:text-blue-400 dark:hover:text-blue-200
+}
+
+h1 {
+	@apply text-lg
 }
