--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 a {
-	@apply text-blue-600 hover:text-blue-800 visited:text-blue-600 dark:visited:text-blue-400 dark:text-blue-400 dark:hover:text-blue-200
+	@apply cursor-pointer text-blue-600 hover:text-blue-800 visited:text-blue-600 dark:visited:text-blue-400 dark:text-blue-400 dark:hover:text-blue-200
 }
 
 h1 {
