Videos! ...and animation fixes
Added video support finally with Twitter adding variants as a valid param on their API.
Performance-wise, autoplay will cause grief so will have to implement pause on scroll.
If not pause on scroll, preview video on hover for n^ms.

At this rate, there isn't much left feature-wise but tidy-up and performance fixes!

- removed video issues from readme
- added proxy for video content
- fixed options dropdown not working on iphone correctly
- fixed iPad detection for iOS fixes
- added option to autoplay videos
- moved scrollToTop's css to global
- changed scrollTop animations to composite for performance
- added gifs and videos to feed
- adjusted animations on overlay for performance (composite)
- updated modal, added support for videos/gifs
- removed animations from metrics
- updated animation for text overlay, fixed some layout calcs
- removed videooverlay.tsx as it was no longer needed
- added will-change to profile image

--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -11,3 +11,21 @@ a {
 h1 {
 	@apply text-lg
 }
+
+/*Consider putting this elsewhere*/
+.scrollTop {
+	/*Layout*/
+	@apply flex flex-row items-center justify-evenly;
+	@apply fixed overflow-hidden z-50;
+	@apply w-fit h-10 bottom-5 right-5 p-2 gap-1;
+	@apply bg-slate-100 dark:bg-slate-700;
+	@apply shadow-lg rounded-full;
+	@apply text-xs uppercase whitespace-nowrap;
+
+	/*Interactions*/
+	@apply select-none cursor-pointer hover:ring;
+
+	/*Animation*/
+	@apply transition-transform will-change-transform translate-x-96;
+	@apply duration-300 ease-in-out;
+}
