--- a/src/modules/gallery/styles/popup.module.css
+++ b/src/modules/gallery/styles/popup.module.css
@@ -12,7 +12,7 @@
 }
 
 .image {
-	@apply object-scale-down shadow-lg transition-opacity ease-in-out duration-150 rounded-md w-auto;
+	@apply object-scale-down shadow-lg transition-opacity ease-in-out duration-150 rounded-md w-auto z-50;
 	max-height: inherit;
 }
 
