--- a/src/modules/gallery/styles/tweet.module.css
+++ b/src/modules/gallery/styles/tweet.module.css
@@ -6,7 +6,7 @@
 	@apply overflow-hidden;
 	@apply transition-shadow ease-in-out duration-150;
 	@apply cursor-pointer;
-	@apply md:hover:ring-2 ring-blue-600 dark:ring-blue-400;
+	@apply md:hover:ring-2 ring-slate-400;
 	contain: content;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .loader {
-	@apply w-7 h-7 transition-opacity ease-in-out duration-300;
+	@apply w-7 h-7 transition-opacity ease-in-out duration-300 text-slate-500;
 }
 
 .textanim {
@@ -65,11 +65,11 @@
 }
 
 .banner {
-	@apply pointer-events-auto bg-black bg-opacity-70 backdrop-blur-sm items-center py-2 px-1 flex cursor-default relative;
+	@apply pointer-events-auto bg-slate-700 bg-opacity-70 backdrop-blur-sm items-center py-2 px-1 flex cursor-default relative;
 }
 
 .banner a {
-	@apply text-white visited:text-white dark:text-white dark:visited:text-white hover:text-blue-300 dark:hover:text-blue-300;
+	@apply text-white visited:text-white hover:text-blue-300 hover:underline;
 	@apply flex flex-wrap items-center justify-center gap-1;
 }
 
@@ -86,10 +86,13 @@
 	@apply w-4;
 }
 
+.metric {
+	@apply pointer-events-auto bg-slate-700 bg-opacity-70 backdrop-blur-sm items-center py-2 px-1 flex cursor-default relative;
+}
 .metric span {
 	@apply hidden sm:block;
 }
-
 .metric a {
-	@apply hover:text-blue-400 dark:hover:text-blue-400;
+	@apply text-white visited:text-white;
+	@apply flex flex-wrap items-center justify-center gap-1;
 }
