--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+	@apply bg-slate-200 dark:bg-slate-900 dark:text-white;
+}
+
 a {
 	@apply cursor-pointer;
 	@apply text-blue-600 hover:text-blue-800 visited:text-blue-600;
