--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -16,6 +16,16 @@ h1 {
 	@apply text-lg
 }
 
+.demoContainer {
+	@apply fixed z-50 w-full sm:w-3/4 max-w-[1080px] h-full;
+	@apply from-slate-200 dark:from-slate-900 via-transparent dark:via-transparent to-slate-200 dark:to-slate-900;
+}
+
+.demoBanner {
+	@apply absolute w-full flex flex-col items-center justify-center p-5 gap-2 select-none;
+	@apply bg-gradient-to-r from-slate-200 dark:from-slate-900 via-white dark:via-slate-700 to-slate-200 dark:to-slate-900;
+}
+
 /*Consider putting this elsewhere*/
 .scrollTop {
 	/*Layout*/
