UX/UI updates, options etc.
A bit of a mess this one but closer to presentation.

- Updated heroicons to 2.0.X
- Updated packages
- Added sm-h to tailwind for small-height cutoff
- Additional UI changes to the landing page
- Updated options dropdown UI
- Made options dropdown mobile friendly
- Adjusted toggleswitch css to be more visually readable
- Added options for gifs and video sound to options
- Removed forced sign in on invalid session
- Readded inline video previews
- Added option to unmute on hover on non-apple devices
- Removed name of poster if it's their profile
- Replace name with DELETED TWEET if tweet is deleted

--- a/src/modules/gallery/styles/tweet.module.css
+++ b/src/modules/gallery/styles/tweet.module.css
@@ -49,7 +49,7 @@
 }
 
 .playbutton {
-	@apply w-1/4 text-gray-100 bg-gray-500 rounded-full opacity-80;
+	@apply w-1/4 text-sky-500 bg-slate-100 shadow-lg border-2 border-sky-500;
 }
 
 .loader {
