- Packages updated - Error page for user not found - Fixed searchbar not displaying searched query - Replaced navbar with anchor tags as Link was forcing shallow - Added missing border to options on mobile - Replaced signed out with options cog - Disabled video options for now - Fixed links going to the wrong search route - Made feed error more friendly - Added media component to reduce duplicated mismatched code - Updated imagepopup to use media component - Updated imagetile to use media component - Forced api to exclude protected retweets to prevent holes in feed - Added protected flag to feed media items - Refreshed profile card to match landing page - Adjusted toggleswitch CSS

--- a/src/modules/gallery/styles/tweet.module.css
+++ b/src/modules/gallery/styles/tweet.module.css
@@ -21,7 +21,7 @@
 }
 
 .video {
-	@apply w-full h-full min-h-[200px] object-cover;
+	@apply w-full h-full min-h-[200px] transition-opacity object-cover ease-in duration-150;
 	height: -webkit-fill-available;
 	content-visibility: auto;
 }
