Tile overlay UI/UX refresh
PC only, mobile support has not been added.
No support for tweet text currently

- Removed old overlay component
- Expanded metrics overlay to be new overlay
- New stylized overlay to match landing page
- Temporarily removed tweet text
- Temporarily ignoring mobile support
- Fixed feed title being overridden at root by title bug fix

--- a/src/modules/profile/styles/profilecard.module.css
+++ b/src/modules/profile/styles/profilecard.module.css
@@ -22,14 +22,14 @@ Transparent, helps contain and space the image and profile card
 Profile image styling
 */
 .image {
-	@apply border-slate-100;
+	@apply bg-slate-100 border-slate-100;
 	@apply relative w-[150px] h-[150px] top-9 z-10 select-none rounded-full overflow-hidden border-4;
 
 	/*Animation*/
 	@apply hover:scale-[1.5] scale-100 transition-transform will-change-transform ease-in-out delay-150 duration-300;
 }
 :global(.dark) .image {
-	@apply border-slate-700;
+	@apply bg-slate-700 border-slate-700;
 }
 
 /* Card
