--- a/src/modules/gallery/styles/tweet.module.css
+++ b/src/modules/gallery/styles/tweet.module.css
@@ -5,7 +5,7 @@
 	@apply rounded-lg shadow-lg;
 	@apply overflow-hidden;
 	@apply transition-shadow ease-in-out duration-150;
-	@apply cursor-pointer;
+	@apply cursor-pointer select-none;
 	@apply md:hover:ring-2 ring-slate-400;
 	contain: content;
 }
@@ -64,35 +64,40 @@
 	@apply absolute right-1 p-1 hover:ring-2 bg-black bg-opacity-70 pointer-events-auto rounded-md uppercase font-bold z-50;
 }
 
-.banner {
-	@apply pointer-events-auto bg-slate-700 bg-opacity-70 backdrop-blur-sm items-center py-2 px-1 flex cursor-default relative;
+.metriccontainer {
+	@apply absolute w-full h-full pointer-events-none;
+	/* box-shadow: inset 0px 0px 65px 60px rgba(55, 65, 81, 0.5); */
 }
-
-.banner a {
-	@apply text-white visited:text-white hover:text-blue-300 hover:underline;
-	@apply flex flex-wrap items-center justify-center gap-1;
+.metricauthors {
+	@apply absolute top-0 left-0 flex flex-nowrap min-w-0 w-full items-center justify-start;
+	@apply z-10 p-1 pb-10 cursor-default;
+	@apply bg-gradient-to-b from-slate-700;
 }
-
-.banner img {
-	@apply rounded-full;
+.metricauthors a {
+	@apply p-1 hover:bg-slate-800 hover:ring-2 rounded-full;
 }
-
-.banneroverlay {
-	@apply w-full h-full flex flex-col text-xs md:text-sm pointer-events-none text-white;
-	@apply transition-opacity ease-in-out duration-150;
+.metrics {
+	@apply absolute right-0 bottom-0 flex flex-col items-end justify-end h-full gap-2;
+	@apply p-2 pl-10 cursor-default;
+	@apply bg-gradient-to-l from-slate-700;
 }
-
-.banneroverlay svg {
-	@apply w-4;
+.metrics a {
+	@apply items-center justify-center;
 }
-
-.metric {
-	@apply pointer-events-auto bg-slate-700 bg-opacity-70 backdrop-blur-sm items-center py-2 px-1 flex cursor-default relative;
+.metriccontainer img {
+	@apply rounded-full border-2 border-slate-200 bg-slate-200;
+	@apply min-w-[24px] min-h-[24px] sm:min-w-[36px] sm:min-h-[36px];
+	@apply max-w-[24px] max-h-[24px] sm:max-w-[36px] sm:max-h-[36px];
 }
-.metric span {
-	@apply hidden sm:block;
+.metriccontainer span {
+	@apply flex text-gray-100;
 }
-.metric a {
-	@apply text-white visited:text-white;
-	@apply flex flex-wrap items-center justify-center gap-1;
+.metriccontainer a {
+	@apply text-white visited:text-white pointer-events-auto text-xs font-medium;
+	@apply flex gap-1 min-w-0 pointer-events-auto items-center;
+	text-shadow: 0px 0px 2px black;
+}
+.metriccontainer svg {
+	@apply w-5 sm:w-6 z-10 pointer-events-auto;
+	filter: drop-shadow(0px 0px 1px black);
 }
