NextJS 13 App Folder Support, UI/UX changes and Performance changes (#3)
Updated to Next13, ignoring 13.0.4 as it has breaking changes to next/router.
Migrated /pages/* to /app/*, big changes for server vs. client code.
Massive performance fix by making the Tweet overlay global rather than per-tile.
UX/UI overhaul.


- Updated NextJS to Next 13, updated all other packages
- Migrated to nextjs's ./app/ folder
- Removed .npmrc as NextAuth updated their dependencies
- Added experimental flag for appDir to nextConfig
- Moved body CSS to global css file for clarity
- Added catch-all rewrite for any future Twitter cdn/url changes for media
- added catch-all to proxyURL
- document has now become root layout
- theme cookie handling updated to match new root layout
- updated pages and api routes, reducing codebase
- consolidated feed code, removed old gallery code
- added spacer to navbar instead of feed
- added light mode styling to options dropdown css
- made scrollTop component hide on click
- updated pluralize number to format thousands comma etc.
- tidied up regextests.ts
- moved relevant code back into imagepopup from feed.tsx to reduce clutter
- Condensed api into one file
- Condensed providers into one file
- Reused Title.tsx in Head.tsx to reduce repeatitive code
- Removed old layout component (from pages)
- Removed options modal as it became redundant
- Fixed searchbar includes for Next13
- Adjusted Title for Next13
- Function naming convention corrections
- Created fancy landing page
- Added demo animation for landing page
- Fixed navigation caching issue, feeds will now properly clear while browsing and not stack.
- Added /me support to [userhandle]
- Removed session param from Options to better support seamless sign out
- Restyled the toggleswitch component
- Moved gallery fetch into it's own typescript file and made it more readable
- Added demo variable to Feed component to lock out fetches to a single fetch for the landin

--- a/src/common/styles/globals.css
+++ b/src/common/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+	@apply bg-slate-200 dark:bg-slate-900 dark:text-white;
+}
+
 a {
 	@apply cursor-pointer;
 	@apply text-blue-600 hover:text-blue-800 visited:text-blue-600;
@@ -10,6 +14,16 @@ a {
 
 h1 {
 	@apply text-lg
+}
+
+.demoContainer {
+	@apply fixed z-50 w-full sm:w-3/4 max-w-[1080px] h-full;
+	@apply from-slate-200 dark:from-slate-900 via-transparent dark:via-transparent to-slate-200 dark:to-slate-900;
+}
+
+.demoBanner {
+	@apply absolute w-full flex flex-col items-center justify-center p-5 gap-2 select-none;
+	@apply bg-gradient-to-r from-slate-200 dark:from-slate-900 via-white dark:via-slate-700 to-slate-200 dark:to-slate-900;
 }
 
 /*Consider putting this elsewhere*/
